@@ -229,11 +229,11 @@ def versions = [
   springCloud     : '2020.0.1',
   springfoxSwagger: '3.0.0',
   testcontainers  : '1.15.2',
-  netty           : '4.1.75.Final',
+  netty           : '4.1.77.Final',
   serviceAuthVersion: '4.0.3'
 ]
 
-ext['spring-framework.version'] = '5.3.18'
+ext['spring-framework.version'] = '5.3.19'
 ext['log4j2.version'] = '2.17.1'
 ext['jackson.version'] = '2.13.2'
 
@@ -340,7 +340,7 @@ dependencies {
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-cache'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
-  implementation group: 'io.springfox', name: 'springfox-swagger2', version: versions.springfoxSwagger
+  implementation group: 'io.springfox', name: 'springfox-boot-starter', version: versions.springfoxSwagger
 
   implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: versions.reformLogging
   implementation group: 'com.github.hmcts.java-logging', name: 'logging-appinsights', version: versions.reformLogging
@@ -423,18 +423,18 @@ dependencies {
   }
   testImplementation group: 'org.mockito', name: 'mockito-inline', version: '3.11.1'
   testImplementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-contract-stub-runner', version: '3.1.0'
+  testImplementation group: 'org.mockito', name: 'mockito-inline', version: '3.11.1'
+  testImplementation group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.9'
+  testImplementation group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.9'
 
   contractTestCompile group: 'io.rest-assured', name: 'rest-assured', version: versions.restAssured
   contractTestCompile group: 'io.rest-assured', name: 'json-path', version: versions.restAssured
   contractTestCompile group: 'io.rest-assured', name: 'xml-path', version: versions.restAssured
-
   contractTestCompile group: 'au.com.dius.pact.consumer', name: 'junit5', version: versions.pact
   contractTestRuntime group: 'au.com.dius.pact.consumer', name: 'junit5', version: versions.pact
-
   contractTestCompile group: 'au.com.dius.pact.provider', name: 'junit5', version: versions.pact
   contractTestCompile group: 'au.com.dius.pact.provider', name: 'spring', version: versions.pact
   contractTestCompile group: 'au.com.dius.pact.provider', name: 'junit5spring', version: versions.pact
-
   contractTestImplementation group: 'org.projectlombok', name: 'lombok', version: versions.lombok
 
   integrationTestImplementation group: 'com.github.tomakehurst', name: 'wiremock', version: '2.27.2'
@@ -450,9 +450,11 @@ dependencies {
   functionalTestImplementation group: 'com.github.hmcts', name: 'befta-fw', version: '8.7.1'
   functionalTestImplementation libraries.junit5
 
-  runtime group: 'org.postgresql', name: 'postgresql', version: '42.2.19'
+  runtime group: 'org.postgresql', name: 'postgresql', version: '42.3.3'
 
   cftlibImplementation group: 'org.springframework.boot', name: 'spring-boot-devtools'
+
+  testCompile 'com.github.hmcts:fortify-client:1.2.0:all'
 }
 
 mainClassName = 'uk.gov.hmcts.reform.hmc.Application'
@@ -523,4 +525,12 @@ bootWithCCD {
   environment("CFT_HEARING_SERVICE_DB_NAME", "hmc")
   environment("S2S_URL", "http://localhost:8489")
   environment("HMC_ACCESS_CONTROL_ENABLED", "false")
+}
+
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+  // The line below prevents the build from failing if the Fortify scan detects issues
+  ignoreExitValue = true
 }
